fix on small screens

--- a/src/styles/components/page_number_nav.module.sass
+++ b/src/styles/components/page_number_nav.module.sass
@@ -32,9 +32,13 @@
     .arrow
       margin-left: 0.5rem
 
-
   .prev-btn,
   .next-btn
     &:disabled
       cursor: default
       background-color: #e4e4e4
+
+@media (max-width: 500px)
+  .container
+    button
+      padding: 0.5rem 0.8rem
